--- a/jdbc-training/build.gradle
+++ b/jdbc-training/build.gradle
@@ -6,5 +6,5 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
 }
