--- a/phariharan/build.gradle
+++ b/phariharan/build.gradle
@@ -7,4 +7,5 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
 }
