Java week 4 Day 5 work completed.

--- a/hariharan/build.gradle
+++ b/hariharan/build.gradle
@@ -7,4 +7,7 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+
 }
