--- a/ariharan/build.gradle
+++ b/ariharan/build.gradle
@@ -8,4 +8,7 @@ dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
     implementation 'com.opencsv:opencsv:5.6'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13' // Check for the latest version
 }
