--- a/hariharan/build.gradle
+++ b/hariharan/build.gradle
@@ -7,7 +7,7 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
-    implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
+    implementation 'com.opencsv:opencsv:5.6'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
