--- a/krishnaraj/build.gradle
+++ b/krishnaraj/build.gradle
@@ -8,4 +8,6 @@ dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
     implementation 'com.opencsv:opencsv:5.6'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13' // Check for the latest version
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
